--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 *.tfstate
-*.tfstate.backup
-terraform_infra.code-workspace
-*/.terraform/
+*.tfstate.*
+*/terraform_infra.code-workspace
+**/.terraform/*
