--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-*/*.tfstate
-*/*.tfstate.*
-*/terraform_infra.code-workspace
-**/.terraform/*
+**/*.tfstate
+**/*.tfstate.*
+**/terraform_infra.code-workspace
+**/.terraform/**
+vpc/.terraform/providers/registry.terraform.io/hashicorp/aws/4.67.0/darwin_arm64/terraform-provider-aws_v4.67.0_x5
